ReFormat code
Signed-off-by: Özkan Pakdil <ozkan.pakdil@gmail.com>